# python-package-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml
pkg/: __init__.py
tests/: test_hello_world.py
