[tool.poetry]
name = "pkg"
version = "0.0.0"
description = "A Python package template.."
authors = ["Mark Douthwaite <mark@douthwaite.io>"]
maintainers = ["Mark Douthwaite <mark@douthwaite.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pre-commit = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.black]
line-length = 88
target-version = ['py36', 'py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
